// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render as a primary button 1`] = `
<Button
  className="ui-shared__button sg-vspxep-button"
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="sg-1gad0ov-content"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is explicitly defined 1`] = `
<Button
  className="ui-shared__button sg-1srupkh-button"
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="sg-2jbepc-content"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is omitted 1`] = `
<Button
  className="ui-shared__button sg-vspxep-button"
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="sg-1gad0ov-content"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a secondary button 1`] = `
<Button
  className="ui-shared__button sg-so4hxh-button"
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="sg-1gad0ov-content"
  >
    Press me
  </div>
</Button>
`;
